#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([GoogleAuth], [1.2.0-SNAPSHOT], [enrico.m.crisostomo@gmail.com])
AC_CONFIG_AUX_DIR([config])

# Initialize Automake
AM_INIT_AUTOMAKE([-Wall -Werror foreign subdir-objects no-dist-gzip dist-zip])
AM_SILENT_RULES([yes])

# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile])
AC_CONFIG_FILES([doc/Makefile])

AC_OUTPUT
